k8s_files/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: pythonappsvc
spec:
  type: ClusterIP
  selector:
    app: pythonapp
  ports:
  - port: 80
    targetPort: 5000
